<resources>
    <string name="app_name" translatable="false">A1L1_HelloWorld</string>
    <string name="city">City</string>
    <string name="button">Select</string>
    <string name="city_moscow">Moscow</string>
    <string name="city_st_petersburg">St.Petersburg</string>
    <string name="city_rostov_na_donu">Rostov-na-Donu</string>
    <string name="city_stavropol">Stavropol</string>
    <string name="city_vladivostok">Vladivostok</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="choose_a_city_btn">choose a city</string>
    <string name="cityHint">City</string>

    <string name="change_city">Change city</string>
    <string name="place_not_found">Place not found</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

</resources>
